--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
+alembic==1.7.1
+bidict==0.21.3
 click==8.0.1
+Faker==8.12.1
 Flask==2.0.1
+Flask-Migrate==3.1.0
+Flask-Moment==1.0.2
+Flask-SocketIO==5.1.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.1
+importlib-resources==5.2.2
+iso3166==2.0.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.5
 MarkupSafe==2.0.1
+psycopg2==2.9.1
+python-dateutil==2.8.2
+python-engineio==4.2.1
+python-socketio==5.4.0
+six==1.16.0
+SQLAlchemy==1.4.23
+text-unidecode==1.3
 Werkzeug==2.0.1
+zipp==3.5.0
